--- a/css/styles.css
+++ b/css/styles.css
@@ -433,3 +433,172 @@ footer i:hover{
   letter-spacing: 1px;
 }
 
+/* CAMISETAS */
+
+.cuadriculaCamisetas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1em;
+}
+
+.productosCamisetas {
+  display: grid;
+  justify-items: center;
+}
+
+.itemCamisetas {
+  margin: 20px;
+  padding: 20px;
+  border-radius: 7px;
+  box-shadow: 5px 8px 12px rgba(0,0,0,.3);
+  background-color: white;
+  position: relative;
+}
+
+.imagenProductoCamisetas{
+  height: 300px;
+  width: 250px;
+  grid-column: 1/3;
+}
+
+.tituloProductoCamisetas {
+  display: grid;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: 5px;
+  grid-column: 1/3;
+}
+
+.precioCamisetas { 
+  font-size: 17px;
+  font-weight: bold;
+  color: white;
+  background-color: #BFA2DB;
+  padding: 5px;
+  border: 1px solid #BFA2DB;
+  border-radius: 5px 0px 0px 5px;
+  position: absolute;
+  bottom: 140px;
+  left: 185px;
+}
+
+.formularioParaSlider {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+.input-cantidadCamisetas {
+  background: transparent;
+  border: 1px solid #BFA2DB;
+  border-radius: 2px;
+  padding: 0;
+  width: 40px;
+  height: 28px;
+  margin: 5px;
+  position: relative;
+  left: 70px;
+  text-align: center;
+}
+
+.boton-agregarCamisetas {
+  margin: 5px;
+  background: transparent;
+  border: none;
+  padding: 7px;
+  background-color:#BFA2DB;
+  color: white;
+  border-radius: 2px;
+  grid-column: 2/3;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  opacity: 1
+}
+
+/* MI CUENTA */
+
+.cuadriculaMiCuenta {
+  margin-top: 30px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.contenedor_nombreYApellido {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.perfilAnonimo {
+  height: 200px;
+  width: 300px;
+  border: 2px solid black;
+}
+
+.contenedor_nombreYApellido {
+  width: 100%;
+}
+
+.nombreYApellido {
+  margin-left: 3%;
+}
+
+.contendedor_misDirecciones {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  position: relative;
+  width: 100%;
+  align-items: center;
+}
+
+.misDirecciones {
+  display: flex;
+  justify-content: start;
+}
+
+.agregarDireccion {
+  display: flex;
+  justify-content: end;
+}
+
+.botonAgregarDireccion {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+
+.botonAgregarDireccion:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+
+.botonAgregarDireccion:active {
+	position:relative;
+	top:1px;
+}
+
+.encabezadoTablaDirecciones {
+  border: 2px
+}
+
+.centrador {
+  display: flex;
+  justify-content: center;
+}
+
+.trash {
+  position: absolute;
+}
