--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,11 @@ p {
 /*Header*/
 
 .portada {
-  margin-top: 10px;
+    background-color: rgb(175 128 196 /5%);
+    border-bottom: solid 1.5px rgb(175 128 196 / 0%);
+    box-shadow: 0px 17px 31px -7px rgb(175 128 196 / 10%);
+    -webkit-box-shadow: 0px 17px 31px -7px rgb(175 128 196 / 10%);
+    -moz-box-shadow: 0px 17px 31px -7px rgb(175 128 196 / 10%);
 }
 
 .contenedorEncabezado {
@@ -108,6 +112,7 @@ a:visited {
 
 .logo {
   width: 100px;
+  margin-top: 10px;
 }
 
 .botonesNav {
@@ -226,6 +231,16 @@ section h2 {
 .categorias {
   display: flex;
   justify-content: center;
+}
+
+.activo{
+  display: block;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 2px;
+  width: 175px;
+  border-bottom: solid 2px #af80c4;
 }
 
 .categorias img {
@@ -601,6 +616,7 @@ input[type=number]::-webkit-inner-spin-button {
   color: white;
   border-radius: 2px;
   grid-column: 2/3;
+  cursor: pointer;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
@@ -622,8 +638,8 @@ main {
 }
 
 .perfilAnonimo {
-  height: 180px;
-  width: 200px;
+  height: 170px;
+  width: 170px;
   border: 2px solid black;
 }
 
@@ -894,7 +910,6 @@ td {
   justify-content: flex-start;
   font-weight: normal;
   text-transform: uppercase;
-  font-size: 20px;
   padding: 25px 0px 25px 35px;
 }
 
