cambios introducidos: - agrego boton login - cambio icono carrito - linkeo camisetas index - linkeo categorias index - agrego boton "volver al inicio" en login - agrego boton "volver al inicio" en crear usuario

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,15 @@ a:visited {
   color: #af80c4;
 }
 
+.botonCarrito {
+  font-size: 25px;
+}
+
+.botonUsuario {
+  font-size: 25px;
+  margin-left: 10px;
+}
+
 .logo {
   width: 100px;
   margin-top: 10px;
