--- a/css/styles.css
+++ b/css/styles.css
@@ -989,3 +989,11 @@ td {
   padding: 5px;
   padding-left: 15px;
 }
+
+/*Mensaje error (lo pongo acá para que lo lo pisen otros estilos, revisar)*/
+.mensaje-error{
+  font-size: 5px;
+  font-weight: normal;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
