--- a/css/styles.css
+++ b/css/styles.css
@@ -503,6 +503,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .productos-similares {
+  width: 80%;
   display: flex;
   justify-content: center;
   margin: 5px;
@@ -513,6 +514,7 @@ input[type=number]::-webkit-inner-spin-button {
   padding: 20px;
   background-color: white;
   border-radius: 7px;
+  width: 50%;
 }
 
 .productos-similares img {
