--- a/css/login.css
+++ b/css/login.css
@@ -159,3 +159,15 @@ body {
     border-radius: 5px;
 }
 
+.error{
+    border: 1px solid red;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+#mensaje{
+    font-size: 5px;
+    font-weight: normal;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+  }
