--- a/css/stylespopup.css
+++ b/css/stylespopup.css
@@ -1,6 +1,6 @@
 .contenedor-popup {
+    position: relative;
     margin: 20px;
-    display: none;
 }
 
 .pagar-tarjeta-guardada {
@@ -23,6 +23,7 @@
     top: -16px;
     font-size: 25px;
     color: #bfa2db;
+    cursor: pointer;
 }
 
 .fa-credit-card {
@@ -206,4 +207,16 @@ margin-left: 5px;
 
 #alias{
     padding-left: 5px;
+}
+
+.popup {
+    position: absolute;
+    left: 400px;
+    top: -500px;
+    scrollbar-color: none;
+    background-color: #f9f9f9;
+}
+
+.noShow {
+    display: none;
 }
