--- a/css/media_query.css
+++ b/css/media_query.css
@@ -24,6 +24,12 @@
     }
 
     /* FORMAS PAGO */
+    .formasPagoContenedor{
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+
     .formasPago {
         margin: 10px;
     }
@@ -84,6 +90,11 @@
         margin-right: 5%;
     }
 
+    .popup {
+        left: -10px;
+ 
+    }
+
     .tablaMisDirecciones {
         width: 88%;
     }
@@ -131,6 +142,7 @@
       }
       
       table {
+        font-size: 7px;
         width: 100%;
       }
 
